<!--
    * Full Name: Ibrahim Ali
    * Student ID: 301022172
    * Section: COMP 304 - 002
-->
<resources>
    <string name="app_name">ExploreServicesApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Home</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_help">Help</string>
    <string name="action_location">Location</string>
    <string name="action_sms">SMS</string>

    <string name="menu_home">Home</string>
    <string name="menu_ibrahim">Ibrahim</string>
    <string name="menu_ali">Ali</string>
    <string name="menu_settings">Settings</string>

    <string name="prompt">Please Select</string>
    <string name="ibrahimLastNameStr">Ali</string>
    <string name="ibrahimZipCodeStr">Zip Code: </string>
    <string name="ibrahimZipCodeHintStr">Enter ZIP code</string>
    <string name="ibrahimWebServicesStr">Web Services</string>
    <string name="ibrahimBackgroundColorQStr">Please select Home Screen background color</string>
    <string name="ibrahimTimeFormatQStr">Please select clock format</string>
    <string name="ibrahimGreenStr">Green</string>
    <string name="ibrahimRedStr">Red</string>
    <string name="ibrahimYellowStr">Yellow</string>
    <string name="ibrahim12hrStr">12hr</string>
    <string name="ibrahim24hrStr">24hr</string>
    <string name="ibrahimSelectFontQStr">Please select dropdown font size</string>
    <string name="ibrahimPortraitStr">Portrait Mode</string>
    <string name="ibrahimSaveStr">Save</string>
    <string name="ibrahimFullNameStr">Ibrahim Ali</string>
    <string name="ibrahimStudentNumStr">301022172</string>
    <string name="ibrahimFirstNameTv">Ibrahim</string>
    <string name="ibrahimDownloadBtnStr">Download</string>
    <string name="zipCodeErrorStr">Please enter valid zip code</string>
    <string name="nameStr">Name:</string>
    <string name="ibrahimHumidityStr">Humidity:</string>


    <string name="imgDownloadStr">The image has been already downloaded</string>
    <string name="loadingMsgStr">Please wait...It is downloading</string>
    <string name="downloadCompleteStr">Download complete</string>
    <string name="zipCodeNumErrorStr">Please Insert 5 digits</string>
    <string name="backPressStr">Are you sure you want to exit?</string>
    <string name="locationSettingsStr">Please check location settings</string>

    <string-array name="courses_array">
        <item>Netowrking for Sftwr Dvlprs</item>
        <item>Software Testing &amp; Quality</item>
        <item>Programming 3</item>
        <item>Data Structures and Algrithms</item>
        <item>Linear Algebra &amp; Statistics</item>
        <item>Mobile Application Development</item>
    </string-array>

    <string-array name="fonts_array">
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
    </string-array>
</resources>