<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SettingsFragment.AliSet"
    android:background="@color/lightGreen"
    android:orientation="vertical">


    <TextView
        android:id="@+id/ibrahimSelectColorTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ibrahimBackgroundColorQStr"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center" >

        <RadioButton
            android:id="@+id/ibrahimYellowRadioBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ibrahimYellowStr" />

        <RadioButton
            android:id="@+id/ibrahimRedRadioBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ibrahimRedStr" />

        <RadioButton
            android:id="@+id/ibrahimGreenRadioBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ibrahimGreenStr" />
    </RadioGroup>

    <TextView
        android:id="@+id/ibrahimSelectTimeFormatTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ibrahimTimeFormatQStr"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <RadioButton
            android:id="@+id/ibrahimHr12RadioBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ibrahim12hrStr" />

        <RadioButton
            android:id="@+id/ibrahimHr24RadioBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ibrahim24hrStr" />

    </RadioGroup>

    <TextView
        android:id="@+id/ibrahimSelectFontTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ibrahimSelectFontQStr"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>

    <Spinner
        android:id="@+id/ibrahimFontSizeSpinner"
        style="@android:style/Widget.Spinner"
        android:layout_width="350dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:prompt="@string/prompt" />

    <Switch
        android:id="@+id/ibrahimPortraitMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/ibrahimPortraitStr" />

    <Button
        android:id="@+id/ibrahimSharedPrefSaveBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ibrahimSaveStr"
        android:layout_marginTop="20dp" />
</LinearLayout>